<resources>
    <string name="app_name">微信</string>
    <string name="moments_text">朋友圈</string>
    <string name="scan_qr_code_text">扫一扫</string>
    <string name="shake_text">摇一摇</string>
    <string name="people_nearby_text">附近的人</string>
    <string name="games_text">游戏</string>
    <string name="mini_programs_text">小程序</string>
    <string name="wallet_text">钱包</string>
    <string name="favorite_text">收藏</string>
    <string name="album_text">相册</string>
    <string name="cards_or_offers_text">卡包</string>
    <string name="sticker_gallery_text">表情</string>
    <string name="settings_text">设置</string>
    <string name="hold_to_talk_text">按住说话</string>
    <string name="use_camera_text">相机</string>
    <string name="video_call_text">视频通话</string>
    <string name="location_text">定位</string>
    <string name="red_packet_text">红包</string>
    <string name="transfer_text">转账</string>
    <string name="contact_card_text">名片</string>
</resources>
