<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/fg_d_ll1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/fg_d_rl1_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:src="@drawable/icon_moments"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/fg_d_rl1_img"
            android:text="@string/moments_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

        <ImageView
            android:id="@+id/fg_d_rl1_avert_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/avert_yujian"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fg_d_ll2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_scan_qr_code"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:background="@color/hint_padding2"></View>

    <LinearLayout
        android:id="@+id/fg_d_ll3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_shake"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shake_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fg_d_ll4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_people_nearby"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_nearby_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fg_d_ll5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_games"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fg_d_ll6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_mini_programs"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mini_programs_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>

</LinearLayout>