<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color"
              android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/fg_m_ll1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/fg_m_rl1_img"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/avert_self"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/fg_m_rl1_img"
            android:layout_alignTop="@id/fg_m_rl1_img"
            android:layout_toRightOf="@id/fg_m_rl1_img"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="风清明"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="ID:liuxingzhou1527"
                android:textColor="@color/hint_text"
                android:textSize="@dimen/text_size_4"/>

        </LinearLayout>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="90dp"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:paddingRight="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_qr_code"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fg_m_ll2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_wallet"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fg_m_ll3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_favorite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:background="@color/hint_padding2"></View>


    <LinearLayout
        android:id="@+id/fg_m_ll4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_album"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:background="@color/hint_padding2"></View>


    <LinearLayout
        android:id="@+id/fg_m_ll5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_cards_offers"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards_or_offers_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:background="@color/hint_padding2"></View>

    <LinearLayout
        android:id="@+id/fg_m_ll6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_sticker_gallery"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sticker_gallery_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fg_m_ll7"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="7.5dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_settings"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_3"/>

    </LinearLayout>


</LinearLayout>