<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.islxz.wechat.activity.ChatActivity">

    <LinearLayout
        android:id="@+id/chat_actionbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/actionBar"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/chat_pre"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_pre"/>

            <View
                android:id="@+id/chat_ab_v1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/chat_pre"
                android:background="@color/black"></View>

            <TextView
                android:id="@+id/chat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/chat_ab_v1"
                android:paddingLeft="15dp"
                android:text="遇见、"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_2"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_avert_info"/>

        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/chat_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chat_v1"
        android:layout_below="@id/chat_actionbar"
        android:background="@color/background_color"
        android:divider="@color/transparent"
        android:dividerHeight="0dp"></ListView>

    <View
        android:id="@id/chat_v1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/chat_toolbar"
        android:background="@color/hint_padding1"></View>

    <LinearLayout
        android:id="@id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageButton
                android:id="@+id/chat_tb_left"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@color/transparent"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/chat_talk"/>

            <ImageButton
                android:id="@+id/chat_tb_more"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/chat_more"/>

            <ImageButton
                android:id="@+id/chat_tb_emoji"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_toLeftOf="@id/chat_tb_more"
                android:background="@color/transparent"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/chat_emoji"/>

            <EditText
                android:id="@+id/chat_tb_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/chat_tb_emoji"
                android:layout_toRightOf="@id/chat_tb_left"
                android:visibility="visible"/>

            <Button
                android:id="@+id/chat_tb_hold_talk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_toLeftOf="@id/chat_tb_emoji"
                android:layout_toRightOf="@id/chat_tb_left"
                android:background="@drawable/button_background"
                android:text="@string/hold_to_talk_text"
                android:textColor="@color/hint_text"
                android:textSize="@dimen/text_size_4"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/hint_padding1"></View>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/chat_tb_ll2"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_album"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/album_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_use_camera"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/use_camera_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_videeo_call"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/video_call_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_location"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/location_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_red_packet"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/red_packet_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_transfer"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/transfer_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_contact_card"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/contact_card_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_background"
                        android:padding="12dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/chat_favorite"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/favorite_text"
                        android:textColor="@color/hint_text"
                        android:textSize="@dimen/text_size_6"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></View>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"></View>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
